Message display resolved (#1083)
* styled number facts card

* styled number facts card

* about section improved

* Power calculator added

* operation not allowed message added

* num fact overlapping issue resolved

* heart icons made same to all

* search bar fised issue resolved

* operation not allowed message added

--- a/css/style.css
+++ b/css/style.css
@@ -323,7 +323,6 @@ h6 {
   justify-content: center;
   align-items: center;
   margin-top: 8vh;
-  margin-right:8rem;
   background: #ff299c;
   height: 3.75rem;
   border-radius: 2.5rem;
